# bigarray_fold_ppx

./: .gitignore  .travis.yml  CHANGES.md  LICENSE.md  Makefile  README.md  bigarray_fold_ppx.opam
src/apps/: common.ml  itest.ml  itest2.ml  jbuild  mtest.ml  mtest2.ml  prof.ml  prof2.ml  test.ml  test2.ml
src/lib/: bigarray_fold_ppx.ml  jbuild
