opam-version: "1.2"
maintainer: "Leonid Rozenberg <leonidr@gmail.com>"
authors: "Leonid Rozenberg <leonidr@gmail.com>"
homepage: "https://github.com/rleonid/bigarray_fold_ppx/"
dev-repo: "git+https://github.com/rleonid/bigarray_fold_ppx.git"
bug-reports: "https://github.com/rleonid/bigarray_fold_ppx/issues"
license: "Apache2"

available: [ ocaml-version >= "4.04" ]

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs "@install"]
]

depends: [
#  "ocaml"               { >= "4.04" }
]

