opam-version: "2.0"
maintainer: "Leonid Rozenberg <leonidr@gmail.com>"
authors: "Leonid Rozenberg <leonidr@gmail.com>"
homepage: "https://github.com/rleonid/bigarray_fold_ppx/"
dev-repo: "git+https://github.com/rleonid/bigarray_fold_ppx.git"
bug-reports: "https://github.com/rleonid/bigarray_fold_ppx/issues"
license: "Apache2"

build: [
  [ "jbuilder" "subst"] {pinned}
  [ "jbuilder" "build" "-p" name "-j" jobs "@install"]
]

depends: [
  "ocaml"                   { >= "4.04" }
  "jbuilder"                { build & >= "1.0+beta16" }
  "ocaml-migrate-parsetree" { >= "1.0.7" }
]

